load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

###############################################################################
# RUST RELEASE MODE OPTIMIZATION
###############################################################################
config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

###############################################################################
# CI DOCKER AUTHENTICATION
###############################################################################
sh_binary(
    name = "buildbuddy_setup_docker_auth",
    srcs = ["buildbuddy_setup_docker_auth.sh"],
)

###############################################################################
# PUSH CONTAINERS
###############################################################################
multirun(
    name = "push",
    commands = [
        # Import tools
        "pg_import_config_push",
        "pg_import_integrations_push",
        "pg_import_metadata_push",
        "pg_import_services_push",
        # Core services
        "cmdb_push",
        "dbgw_push",
        "smdb_push",
        # IMS Services
        "push_imdb",
        "push_binance_data",
        # MDS Services
        "push_kaiko_proxy",
        "push_mddb",
    ],
    jobs = 0,  # Set to 0 to run in parallel
    visibility = ["//visibility:public"],
)

# Import tools
command(
    name = "pg_import_config_push",
    command = "//alias:pg_import_config_push",
)

command(
    name = "pg_import_integrations_push",
    command = "//alias:pg_import_integrations_push",
)

command(
    name = "pg_import_metadata_push",
    command = "//alias:pg_import_metadata_push",
)

command(
    name = "pg_import_services_push",
    command = "//alias:pg_import_services_push",
)

# Core services
command(
    name = "cmdb_push",
    command = "//alias/service:cmdb_push",
)

command(
    name = "dbgw_push",
    command = "//alias/service:dbgw_push",
)

command(
    name = "smdb_push",
    command = "//alias/service:smdb_push",
)

# IMS Data Services
command(
    name = "push_imdb",
    command = "//alias/service:imdb_push",
)

command(
    name = "push_binance_data",
    command = "//alias/service:binance_data_push",
)

# MDS Services
command(
    name = "push_kaiko_proxy",
    command = "//alias/service:kaiko_proxy_push",
)

command(
    name = "push_mddb",
    command = "//alias/service:mddb_push",
)
