load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

###############################################################################
# RUST RELEASE MODE OPTIMIZATION
###############################################################################
config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

###############################################################################
# CI DOCKER AUTHENTICATION
###############################################################################
sh_binary(
    name = "buildbuddy_setup_docker_auth",
    srcs = ["buildbuddy_setup_docker_auth.sh"],
)

###############################################################################
# PUSH CONTAINERS
###############################################################################
multirun(
    name = "push",
    commands = [
        # Import tools
        "pg_import_config_push",
        "pg_import_integrations_push",
        "pg_import_services_push",
        # Core services
        "cmdb_push",
        "dbgw_push",
        "smdb_push",
        # IMS Services
        "imdb_push",
        # MDS Services
        "mddb_push",
    ],
    jobs = 0,  # Set to 0 to run in parallel
    visibility = ["//visibility:public"],
)

# Import tools
command(
    name = "pg_import_config_push",
    command = "//alias:pg_import_config_push",
)

command(
    name = "pg_import_integrations_push",
    command = "//alias:pg_import_integrations_push",
)

command(
    name = "pg_import_services_push",
    command = "//alias:pg_import_services_push",
)

# Core services
command(
    name = "cmdb_push",
    command = "//alias/service:cmdb_push",
)

command(
    name = "dbgw_push",
    command = "//alias/service:dbgw_push",
)

command(
    name = "smdb_push",
    command = "//alias/service:smdb_push",
)

command(
    name = "mddb_push",
    command = "//alias/service:mddb_push",
)
