[workspace]
resolver = "2"

members = [
    "queng_common/*",
    "queng_components/*",
    "queng_datastructures/*",
    "queng_extensions/*",
    "queng_import/*/*",
    "queng_infra/*/*",
    "queng_integration/data/*",
    "queng_message/*",
    "queng_macros/*",
    "queng_proto/*",
    "queng_sbe/*",
    "queng_specs/*/*",
    "queng_system_core/*/*",
    "queng_system_ims_clients/*",
    "queng_system_ims_data/*/*",
    "queng_system_mds/*/*",
    "queng_template/*",
    "queng_traits/*",
    "queng_utils/*",
    "queng_utils_test/*",
]
exclude = [
    "queng_sbe/sbe_schema",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"
repository = "https://github.com/marvin-hansen/quant-engine"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]

[workspace.dependencies]
# ==============
# Internal Aliases
# ==============

# Servide clients
# Core
cmdb_client = { path = "queng_system_core/cmdb/cmdb_client" }
smdb_client = { path = "queng_system_core/smdb/smdb_client" }
imdb_client = { path = "queng_system_core/imdb/imdb_client" }
ims_data_client = { path = "queng_system_ims_clients/ims_data_client" }
# MDS
mddb_client = { path = "queng_system_mds/mddb/mddb_client" }

# Common
common_config = { path = "queng_common/common_config" }
common_data_bar = { path = "queng_common/common_data_bar" }
common_database = { path = "queng_common/common_database" }
common_env = { path = "queng_common/common_env" }
common_errors = { path = "queng_common/common_errors" }
common_exchange = { path = "queng_common/common_exchange" }
common_ims = { path = "queng_common/common_ims" }
common_message = { path = "queng_common/common_message" }
common_metadata = { path = "queng_common/common_metadata" }
common_order = { path = "queng_common/common_order" }
common_orderbook = { path = "queng_common/common_orderbook" }
common_platform = { path = "queng_common/common_platform" }
common_service = { path = "queng_common/common_service" }
common_trade = { path = "queng_common/common_trade" }

# Components
config_manager = { path = "queng_components/config_manager" }
environment_manager = { path = "queng_components/environment_manager" }
pattern_manager = { path = "queng_components/pattern_manager" }

# Datastructures
ring_buffer = { path = "queng_datastructures/ring_buffer" }
sliding_window = { path = "queng_datastructures/sliding_window" }

# Extensions
common_data_bar_ext = { path = "queng_extensions/common_data_bar_ext" }
common_order_ext = { path = "queng_extensions/common_order_ext" }
cow_ext = { path = "queng_extensions/cow_ext" }

# Import
# Core
config_import = { path = "queng_import/core/config_import" }
integration_import = { path = "queng_import/core/integration_import" }
metadata_import = { path = "queng_import/core/metadata_import" }
service_import = { path = "queng_import/core/service_import" }
# Kaiko
kaiko_download = { path = "queng_import/kaiko/kaiko_download" }
kaiko_import = { path = "queng_import/kaiko/kaiko_import" }
kaiko_test_utils = { path = "queng_import/kaiko/kaiko_test_utils" }
# Utils
pg_import_print_utils = { path = "queng_import/postgres/pg_import_print_utils" }

# Infra
# Clickhouse DB
clickhouse_config_manager = { path = "queng_infra/clickhouse/clickhouse_config_manager" }
clickhouse_utils = { path = "queng_infra/clickhouse/clickhouse_utils" }
db_clickhouse_manager = { path = "queng_infra/clickhouse/db_clickhouse_manager" }
# Postgres DB
pg_cmdb = { path = "queng_infra/postgres/pg_cmdb" }
pg_imdb = { path = "queng_infra/postgres/pg_imdb" }
pg_mddb = { path = "queng_infra/postgres/pg_mddb" }
pg_smdb = { path = "queng_infra/postgres/pg_smdb" }
pg_cmdb_manager = { path = "queng_infra/postgres/pg_cmdb_manager" }
pg_imdb_manager = { path = "queng_infra/postgres/pg_imdb_manager" }
pg_mddb_manager = { path = "queng_infra/postgres/pg_mddb_manager" }
pg_smdb_manager = { path = "queng_infra/postgres/pg_smdb_manager" }
postgres_common = { path = "queng_infra/postgres/postgres_common" }
postgres_config_manager = { path = "queng_infra/postgres/postgres_config_manager" }
postgres_migrations = { path = "queng_infra/postgres/postgres_migrations" }

# Integration
# Data integration
binance_coin_futures_data_integration = { path = "queng_integration/data/binance_coin_futures_data_integration" }
binance_coin_futures_testnet_data_integration = { path = "queng_integration/data/binance_coin_futures_testnet_data_integration" }
binance_core_data_integration = { path = "queng_integration/data/binance_core_data_integration" }
binance_spot_data_integration = { path = "queng_integration/data/binance_spot_data_integration" }
binance_spot_testnet_data_integration = { path = "queng_integration/data/binance_spot_testnet_data_integration" }
binance_usd_futures_data_integration = { path = "queng_integration/data/binance_usd_futures_data_integration" }
binance_usd_futures_testnet_data_integration = { path = "queng_integration/data/binance_usd_futures_testnet_data_integration" }

# Macros
data_integration_macro = { path = "queng_macros/data_integration_macro" }

# Mesasge bus
message_consumer = { path = "queng_message/message_consumer" }
message_producer = { path = "queng_message/message_producer" }
message_shared = { path = "queng_message/message_shared" }
message_stream = { path = "queng_message/message_stream" }

# Proto
proto_cmdb = { path = "queng_proto/proto_cmdb" }
proto_cmdb_utils = { path = "queng_proto/proto_cmdb_utils" }
proto_imdb = { path = "queng_proto/proto_imdb" }
proto_imdb_utils = { path = "queng_proto/proto_imdb_utils" }
proto_mddb = { path = "queng_proto/proto_mddb" }
proto_mddb_utils = { path = "queng_proto/proto_mddb_utils" }
proto_smdb = { path = "queng_proto/proto_smdb" }
proto_smdb_utils = { path = "queng_proto/proto_smdb_utils" }

# SBE
sbe_bindings = { path = "queng_sbe/sbe_bindings" }
sbe_messages_client = { path = "queng_sbe/sbe_messages_client" }
sbe_messages_control = { path = "queng_sbe/sbe_messages_control" }
sbe_messages_data = { path = "queng_sbe/sbe_messages_data" }
sbe_messages_order = { path = "queng_sbe/sbe_messages_order" }
sbe_types = { path = "queng_sbe/sbe_types" }
sbe_utils = { path = "queng_sbe/sbe_utils" }

# MDS
kaiko_client = { path = "queng_system_mds/kaiko/kaiko_client" }
kaiko_proxy = { path = "queng_system_mds/kaiko/kaiko_proxy" }
# Non-Bazel targets since CloudFlare workers are build with Wrangler
kaiko_cdn = { path = "queng_system_mds/kaiko/kaiko_cdn" }
kaiko_cdn_auth = { path = "queng_system_mds/kaiko/kaiko_cdn_auth" }
# Service template
grpc_service = { path = "queng_template/grpc_service" }
ims_data_service = { path = "queng_template/ims_data_service" }

# Specs
# Config specs
portfolio_specs = { path = "queng_specs/config_specs/portfolio_specs" }
# Container specs
container_specs_clickhouse = { path = "queng_specs/container_specs/container_specs_clickhouse" }
container_specs_iggy = { path = "queng_specs/container_specs/container_specs_iggy" }
container_specs_kaiko = { path = "queng_specs/container_specs/container_specs_kaiko" }
container_specs_postgres = { path = "queng_specs/container_specs/container_specs_postgres" }
# DB specs
db_specs_clickhouse = { path = "queng_specs/database_specs/db_specs_clickhouse" }
db_specs_postgres = { path = "queng_specs/database_specs/db_specs_postgres" }
# Integration specs
integration_specs_all = { path = "queng_specs/integration_specs/integration_specs_all" }
# Service specs
cmdb_specs = { path = "queng_system_core/cmdb/cmdb_specs" }
dbgw_specs = { path = "queng_system_core/dbgw/dbgw_specs" }
smdb_specs = { path = "queng_system_core/smdb/smdb_specs" }
imdb_specs = { path = "queng_system_core/imdb/imdb_specs" }
mddb_specs = { path = "queng_system_mds/mddb/mddb_specs" }
shared_service_specs = { path = "queng_specs/service_specs/shared_service_specs" }
service_specs_all = { path = "queng_specs/service_specs/service_specs_all" }

# Traits
trait_data_integration = { path = "queng_traits/trait_data_integration" }
trait_event_consumer = { path = "queng_traits/trait_event_consumer" }
trait_event_processor = { path = "queng_traits/trait_event_processor" }
trait_exec_integration = { path = "queng_traits/trait_exec_integration" }

# Utils
client_utils = { path = "queng_utils/client_utils" }
crypto_utils = { path = "queng_utils/crypto_utils" }
encoding_utils = { path = "queng_utils/encoding_utils" }
math_utils = { path = "queng_utils/math_utils" }
# Test utils
iggy_test_utils = { path = "queng_utils_test/iggy_test_utils" }

# ==============
# External crates
# ==============
# Proc Macro Dependencies
async-trait = { version = "0.1" }
enum_dispatch = { version = "0.3" }
trait-variant = { version = "0.1" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
# Dependencies that I maintained
docker_utils = { version = "0.2" }
service_utils = { version = "0.2" }
# Regular dependencies
base16ct = { version = "0.2", default-features = false, features = ["alloc"] }
blake3 = { version = "1.5", default-features = false }
bytes = { version = "1.8" }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = {version = "0.8"}
diesel = { version = "2.2", default-features = false, features = ["postgres", "pq-src", "r2d2"] }
diesel_migrations = { version = "2.2", default-features = false, features = ["postgres"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime"] }
iggy = { version = "0.6.200" }
klickhouse = { version = "0.13" }
mimalloc = { version = "0.1.43" }
prost = { version = "0.13.4" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "gzip"] }
rust_decimal = { version = "1.36" }
rust_decimal_macros = { version = "1.36" }
rustls = { version = "0.23.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = { version = "0.11.0-pre.4", default-features = false }
tokio = { version = "1.42", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"]}
tonic = { version = "0.12", features = ["transport"] }
tonic-build = { version = "0.12" }
tonic-health = { version = "0.12", default-features = false, features = ["transport"] }
warp = { version = "0.3" }
# Depdendencies for cloudflare workers that are not build with Bazel
console_error_panic_hook = { version = "0.1" }
worker = { version = "0.5", default-features = false }
worker-macros = { version = "0.5" }
# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }

# Linting with clippy
[workspace.lints.clippy]
all = "warn"

# Linting strict mode
[workspace.lints.rust]
# Warnings
deprecated-safe = "warn"
deprecated_safe_2024 = "warn"
rust-2024-compatibility = "warn"


# Optimize all crates
[profile.release]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
strip = 'debuginfo'  # Automatically strip debug infos from the binary to reduce size
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
